--- a/index.html
+++ b/index.html
@@ -1,74 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Volker Otto – Front/Backend Developer, Hamburg</title>        
+    <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="assets/styles/styles_day.css">
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="L4ci.github.io : " />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>L4ci.github.io</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/l4ci">View on GitHub</a>
-
-          <h1 id="project_title">L4ci.github.io</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
+    <meta name="description" content="Front/Backend Developer, Hamburg">
     
+    <meta name="apple-mobile-web-app-title" content="Volker Otto – Front/Backend Developer, Hamburg">
+    <!-- <link rel="icon" href="assets/images/favicon.png" />
+    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png" /> -->
+    <!--<link rel="alternate" type="application/rss+xml" href="http://volkerotto.net/feed" title="Blog Feed" />-->
 
-  </body>
+    <!--[if lt IE 9]><script src="assets/js/html5shiv.js"></script><![endif]-->
+<style type="text/css"></style></head>
+
+<body cz-shortcut-listen="true">
+    <div class="site">	
+	<div class="header animated fadeInRight">
+
+	  <h1>Volker Otto</h1>
+	  <h2>Front/Backend Developer, Hamburg</h2>
+
+	  <h3>Building awesome websites with my small team at <a href="http://mowe-design.de/">mowe-design.de</a>. I created <a href="https://github.com/l4ci/reddix">reddix</a>, a reddit chrome extension. And <a href="https://github.com/l4ci/Br4ckets-Theme">Br4ckets</a> a Color Scheme based on Adobe Brackets for Sublime Text.</h3>
+
+<p>Find me on <a href="https://plus.google.com/101109760577750566740/posts">Google+</a>, <a href="https://www.facebook.com/volker.otto">Facebook</a>, <a href="https://twitter.com/hellovolker">Twitter</a> or <a href="http://linkedin.com/profile/view?id=211323021">LinkedIn</a>.<br>
+You can view my blog here - soon. View code and projects on <a href="https://github.com/l4ci">github</a>. Maybe draft me on <a href="http://dribbble.com/hellovolker">dribbble</a>? View stuff I saved on the web to <a href="https://pinboard.in/u:l4ci">pinboard</a>.</p>
+
+	</div>
+
+        <footer role="contentinfo" class="animated fadeInRight">
+                        <p>© 2010-2013 <a href="mailto:hello@volkerotto.net">Volker Otto</a> – Made with <a href="http://getkirby.com/">kirby</a> – Hosted on <a href="https://uberspace.de/">uberspace</a></p>
+ - <a href="http://volkerotto.net/?mood=night">Switch Theme</a>
+        </footer>
+
+    </div><!-- .site -->
+
+</body>
 </html>
