--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!--[if lte IE 8]><html class="ie"><![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"><!--<![endif]-->
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -10,33 +13,37 @@
     <meta name="description" content="Front/Backend Developer, Hamburg">
     
     <meta name="apple-mobile-web-app-title" content="Volker Otto – Front/Backend Developer, Hamburg">
-    <!-- <link rel="icon" href="assets/images/favicon.png" />
-    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png" /> -->
-    <!--<link rel="alternate" type="application/rss+xml" href="http://volkerotto.net/feed" title="Blog Feed" />-->
 
     <!--[if lt IE 9]><script src="assets/js/html5shiv.js"></script><![endif]-->
 <style type="text/css"></style></head>
 
 <body cz-shortcut-listen="true">
     <div class="site">	
-	<div class="header animated fadeInRight">
+	   <div class="header animated fadeInRight">
 
-	  <h1>Volker Otto</h1>
-	  <h2>Front/Backend Developer, Hamburg</h2>
+        <h1>Volker Otto</h1>
+        <h2>Front/Backend Developer, Hamburg</h2>
 
-	  <h3>Building awesome websites with my small team at <a href="http://mowe-design.de/">mowe-design.de</a>. I created <a href="https://github.com/l4ci/reddix">reddix</a>, a reddit chrome extension. And <a href="https://github.com/l4ci/Br4ckets-Theme">Br4ckets</a> a Color Scheme based on Adobe Brackets for Sublime Text.</h3>
+        <h3>Building awesome websites with my small team at <a href="http://mowe-design.de/">mowe-design.de</a>. I created <a href="https://github.com/l4ci/reddix">reddix</a>, a reddit chrome extension. And <a href="https://github.com/l4ci/Br4ckets-Theme">Br4ckets</a> a Color Scheme based on Adobe Brackets for Sublime Text.</h3>
 
-<p>Find me on <a href="https://plus.google.com/101109760577750566740/posts">Google+</a>, <a href="https://www.facebook.com/volker.otto">Facebook</a>, <a href="https://twitter.com/hellovolker">Twitter</a> or <a href="http://linkedin.com/profile/view?id=211323021">LinkedIn</a>.<br>
-You can view my blog here - soon. View code and projects on <a href="https://github.com/l4ci">github</a>. Maybe draft me on <a href="http://dribbble.com/hellovolker">dribbble</a>? View stuff I saved on the web to <a href="https://pinboard.in/u:l4ci">pinboard</a>.</p>
+        <p>Find me on <a href="https://plus.google.com/101109760577750566740/posts">Google+</a>, <a href="https://www.facebook.com/volker.otto">Facebook</a>, <a href="https://twitter.com/hellovolker">Twitter</a> or <a href="http://linkedin.com/profile/view?id=211323021">LinkedIn</a>.<br>You can view my blog here - soon. View code and projects on <a href="https://github.com/l4ci">github</a>. Maybe draft me on <a href="http://dribbble.com/hellovolker">dribbble</a>? View stuff I saved on the web to <a href="https://pinboard.in/u:l4ci">pinboard</a>.</p>
 
 	</div>
 
-        <footer role="contentinfo" class="animated fadeInRight">
-                        <p>© 2010-2013 <a href="mailto:hello@volkerotto.net">Volker Otto</a> – Made with <a href="http://getkirby.com/">kirby</a> – Hosted on <a href="https://uberspace.de/">uberspace</a></p>
- - <a href="http://volkerotto.net/?mood=night">Switch Theme</a>
-        </footer>
+    <footer role="contentinfo" class="animated fadeInRight">
+        <p>© 2010-2013 <a href="mailto:hello@volkerotto.net">Volker Otto</a> – Hosted on <a href="http://pages.github.com/">github</a></p>
+    </footer>
 
     </div><!-- .site -->
-
+    
+    <!-- Google Analytics -->
+  <script src="./Volker Otto – Front Backend Developer, Hamburg_files/analytics.js"></script><script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-11611534-7');ga('send','pageview');
+  </script>
 </body>
 </html>
