changed google analytics

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Volker Otto – Front/Backend Developer, Hamburg</title>        
     <link rel="stylesheet" href="assets/styles/styles.css">
-    <link rel="stylesheet" href="assets/styles/styles_day.css">
+    <link rel="stylesheet" href="assets/styles/styles_night.css">
 
     <meta name="description" content="Front/Backend Developer, Hamburg">
     
@@ -18,32 +18,31 @@
 <style type="text/css"></style></head>
 
 <body cz-shortcut-listen="true">
-    <div class="site">	
-	   <div class="header animated fadeInRight">
+  <div class="site">	
 
-        <h1>Volker Otto</h1>
-        <h2>Front/Backend Developer, Hamburg</h2>
-
-        <h3>Building awesome websites with my small team at <a href="http://mowe-design.de/">mowe-design.de</a>. I created <a href="https://github.com/l4ci/reddix">reddix</a>, a reddit chrome extension. And <a href="https://github.com/l4ci/Br4ckets-Theme">Br4ckets</a> a Color Scheme based on Adobe Brackets for Sublime Text.</h3>
-
-        <p>Find me on <a href="https://plus.google.com/101109760577750566740/posts">Google+</a>, <a href="https://www.facebook.com/volker.otto">Facebook</a>, <a href="https://twitter.com/hellovolker">Twitter</a> or <a href="http://linkedin.com/profile/view?id=211323021">LinkedIn</a>.<br>You can view my blog here - soon. View code and projects on <a href="https://github.com/l4ci">github</a>. Maybe draft me on <a href="http://dribbble.com/hellovolker">dribbble</a>? View stuff I saved on the web to <a href="https://pinboard.in/u:l4ci">pinboard</a>.</p>
-
-	</div>
+    <div class="header animated fadeInRight">
+      <h1>Volker Otto</h1>
+      <h2>Front/Backend Developer, Hamburg</h2>
+      <h3>Building awesome websites with my small team at <a href="http://mowe-design.de/">mowe-design.de</a>. I created <a href="https://github.com/l4ci/reddix">reddix</a>, a reddit chrome extension. And <a href="https://github.com/l4ci/Br4ckets-Theme">Br4ckets</a> a Color Scheme based on Adobe Brackets for Sublime Text.</h3>
+      <p>Find me on <a href="https://plus.google.com/101109760577750566740/posts">Google+</a>, <a href="https://www.facebook.com/volker.otto">Facebook</a>, <a href="https://twitter.com/hellovolker">Twitter</a> or <a href="http://linkedin.com/profile/view?id=211323021">LinkedIn</a>.<br>You can view my blog here - soon. View code and projects on <a href="https://github.com/l4ci">github</a>. Maybe draft me on <a href="http://dribbble.com/hellovolker">dribbble</a>? View stuff I saved on the web to <a href="https://pinboard.in/u:l4ci">pinboard</a>.</p>
+    </div>
 
     <footer role="contentinfo" class="animated fadeInRight">
-        <p>© 2010-2013 <a href="mailto:hello@volkerotto.net">Volker Otto</a> – Hosted on <a href="http://pages.github.com/">github</a></p>
+      <p>© 2010-2013 <a href="mailto:hello@volkerotto.net">Volker Otto</a> – Hosted on <a href="http://pages.github.com/">github</a></p>
     </footer>
 
-    </div><!-- .site -->
+  </div><!-- .site -->
     
     <!-- Google Analytics -->
-  <script src="./Volker Otto – Front Backend Developer, Hamburg_files/analytics.js"></script><script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-11611534-7');ga('send','pageview');
+  <script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-11611534-7']);
+  _gaq.push(['_trackPageview']);
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
   </script>
 </body>
 </html>
