--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Volker Otto – Front/Backend Developer, Hamburg</title>        
+    <title>Volker Otto – Web Architect, Hamburg</title>        
     <link rel="stylesheet" href="assets/styles/styles.css">
     <link rel="stylesheet" href="assets/styles/styles_night.css">
 
@@ -22,9 +22,9 @@
 
     <div class="header animated fadeInRight">
       <h1>Volker Otto</h1>
-      <h2>Front/Backend Developer, Hamburg</h2>
+      <h2>Web Architect, Hamburg</h2>
       <h3>Building awesome websites with my small team at <a href="http://mowe-design.de/">mowe-design.de</a>. I created <a href="https://github.com/l4ci/reddix">reddix</a>, a reddit chrome extension. And <a href="https://github.com/l4ci/Br4ckets-Theme">Br4ckets</a> a Color Scheme based on Adobe Brackets for Sublime Text.</h3>
-      <p>Find me on <a href="https://plus.google.com/101109760577750566740/posts">Google+</a>, <a href="https://www.facebook.com/volker.otto">Facebook</a>, <a href="https://twitter.com/hellovolker">Twitter</a> or <a href="http://linkedin.com/profile/view?id=211323021">LinkedIn</a>.<br>You can view my blog here - soon. View code and projects on <a href="https://github.com/l4ci">github</a>. Maybe draft me on <a href="http://dribbble.com/hellovolker">dribbble</a>? View stuff I saved on the web to <a href="https://pinboard.in/u:l4ci">pinboard</a>.</p>
+      <p>Find me on <a href="https://plus.google.com/101109760577750566740/posts">Google+</a>, <a href="https://www.facebook.com/volker.otto">Facebook</a>, <a href="https://twitter.com/hellovolker">Twitter</a> or <a href="http://linkedin.com/profile/view?id=211323021">LinkedIn</a>.<br>View code and projects on <a href="https://github.com/l4ci">github</a>. Maybe draft me on <a href="http://dribbble.com/hellovolker">dribbble</a>? View stuff I saved on the web to <a href="https://pinboard.in/u:l4ci">pinboard</a>.</p>
     </div>
 
     <footer role="contentinfo" class="animated fadeInRight">
