few css changes

--- a/_posts/2014-01-22-styleguide.html
+++ b/_posts/2014-01-22-styleguide.html
@@ -182,8 +182,9 @@ excerpt:    This Styleguide should show anyone how this sites markup makes sense
       </p>
     </div>
      <div class="col-50">
-      <h3 class="text-font-family--serif">Droid Serif</h3>
-      <p>Used as regular paragraph font.</p>
+      <h3 class="text-font-family--serif"><del>Droid Serif</del></h3>
+      <p><del>Used as regular paragraph font.</del></p>
+      <p><strong>Update:</strong> Currently testing if a sans-serif font is more readable at these big sizes.</p>
       <p>
         The Droid Serif font family features a contemporary appearance and was designed for comfortable reading on screen. Designed by Steve Matteson, Type Director of Ascender Corp, Droid Serif features slightly condensed letterforms to maximize the amount of text displayed on small screens. <a href="http://www.google.com/fonts/specimen/Droid+Serif">Read more</a>
       </p>
