--- a/about/index.html
+++ b/about/index.html
@@ -44,18 +44,4 @@ layout: default
 </div>
 
 
-<footer class="container">
-  <section>
-    <div class="col-75">
-      {% include social.html %}
-    </div>
-  </section>
-</footer>
-
-<div class="container colophon">
-  <section>
-    <div class="col-75">
-      {% include colophon.html %}
-    </div>
-  </section>
-</div>
+{% include social_footer.html %}
