--- a/impressum/index.html
+++ b/impressum/index.html
@@ -56,18 +56,4 @@ layout: default
   </section>
 </div>
 
-<footer class="container">
-  <section>
-    <div class="col-75">
-      {% include social.html %}
-    </div>
-  </section>
-</footer>
-
-<div class="container colophon">
-  <section>
-    <div class="col-75">
-      {% include colophon.html %}
-    </div>
-  </section>
-</div>
+{% include social_footer.html %}
