changed overall style

--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ layout: default
   <section class="center">
     <div class="col-70 margin--m--bottom">
       <h1 class="hero">{{ page.title }}</h1>
-      <p class="h4 lead subheader"></p>
+      <p class="lead subheader"></p>
     </div>
   </section>
 </div>
