--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 title: Web Architect, Hamburg
 layout: default
 ---
-<div class="container bg--blue">
+<div class="container bg--blue" style="background-image:url(/assets/img/cover/cover-me.jpg);">
+  <div class="container--overlay"></div>
   <section class="center">
     <div class="col-70">
       <h1 class="hero">Volker Otto</h1>
-      <h2 class="h3 lead subheader">Web Architect, Hamburg</h2>
+      <h2 class="h3 subheader">Web Architect, Hamburg</h2>
     </div>
     <div class="col-70 margin--m--bottom">
-      <p class="h4 lead">Building awesome websites with my small team at <a href="http://mowe-design.de/">mowe-design.de</a>. Creator of <a href="https://github.com/{{site.me.github}}/reddix">reddix</a>, a reddit chrome extension. And <a href="https://github.com/{{site.me.github}}/Br4ckets-Theme">Br4ckets</a> a Color Scheme based on Adobe Brackets for Sublime Text.</p>
+      <hr>
+      <p class="lead">Building awesome websites with my small team at <a href="http://mowe-design.de/">mowe-design.de</a>. Creator of <a href="https://github.com/{{site.me.github}}/reddix">reddix</a>, a reddit chrome extension. And <a href="https://github.com/{{site.me.github}}/Br4ckets-Theme">Br4ckets</a> a Color Scheme based on Adobe Brackets for Sublime Text.</p>
     </div>
   </section>
 </div>
