--- a/projects/index.html
+++ b/projects/index.html
@@ -3,4 +3,6 @@ title: Projects
 lead: Read what I do in my spare time
 layout: tag
 displaytag: projects
+cover: cover-elbe.jpg
+cover-class: container-image--bottom
 ---
