--- a/_posts/2014-01-24-gofreaks.html
+++ b/_posts/2014-01-24-gofreaks.html
@@ -7,6 +7,7 @@ tags:
   - clients
   - projects
 excerpt:    Websites for gaming communities tend to be looking like from the past. I tried to change that with my recent project for the german multigaming clan gofreaks.eu.
+cover:     cover-me.jpg
 ---
 <div class="container">
   <section>
