--- a/impressum/index.html
+++ b/impressum/index.html
@@ -2,11 +2,12 @@
 title: Impressum
 layout: default
 ---
-<div class="container bg--blue">
+<div class="container bg--blue" style="background-image:url(/assets/img/cover-building.jpg);">
+  <div class="container--overlay"></div>
   <section class="center">
     <div class="col-70 margin--m--bottom">
       <h1 class="hero">Impressum</h1>
-      <p class="h4 lead subheader">Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</p>
+      <p class="lead subheader">Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</p>
     </div>
   </section>
 </div>
