--- a/_posts/2014-01-22-styleguide.html
+++ b/_posts/2014-01-22-styleguide.html
@@ -172,7 +172,7 @@ excerpt:    This Styleguide should show anyone how this sites markup makes sense
     </div>
     <div class="col-50">
       <h3>Source Sans Pro</h3>
-      <p>Used on the headings and very small text.</p>
+      <p>Used on the all paragraphs and small headings.</p>
       <p>
         Source® Sans Pro, Adobe's first open source typeface family, was designed by Paul D. Hunt. It is a sans serif typeface intended to work well in user interfaces.
         <a href="http://www.google.com/fonts/specimen/Source+Sans+Pro">Read more</a>
@@ -182,11 +182,10 @@ excerpt:    This Styleguide should show anyone how this sites markup makes sense
       </p>
     </div>
      <div class="col-50">
-      <h3 class="text-font-family--serif"><del>Droid Serif</del></h3>
-      <p><del>Used as regular paragraph font.</del></p>
-      <p><strong>Update:</strong> Currently testing if a sans-serif font is more readable at these big sizes.</p>
+      <h3 class="text-font-family--serif">Roboto Slab</h3>
+      <p>Used for headings and attention grabbers.</p>
       <p>
-        The Droid Serif font family features a contemporary appearance and was designed for comfortable reading on screen. Designed by Steve Matteson, Type Director of Ascender Corp, Droid Serif features slightly condensed letterforms to maximize the amount of text displayed on small screens. <a href="http://www.google.com/fonts/specimen/Droid+Serif">Read more</a>
+        Roboto has a dual nature. It has a mechanical skeleton and the forms are largely geometric. At the same time, the font features friendly and open curves. While some grotesks distort their letterforms to force a rigid rhythm, Roboto doesn’t compromise, allowing letters to be settled into their natural width. This makes for a more natural reading rhythm more commonly found in humanist and serif types. <a href="http://www.google.com/fonts/specimen/Roboto+Slab">Read more</a>
       </p>
     </div>
   </section>
