--- a/_posts/2014-01-22-styleguide.html
+++ b/_posts/2014-01-22-styleguide.html
@@ -171,7 +171,7 @@ excerpt:    This Styleguide should show anyone how this sites markup makes sense
       </ul>
     </div>
     <div class="col-50">
-      <h3>Source Sans Pro</h3>
+      <h3 class="text-font-family--sans">Source Sans Pro</h3>
       <p>Used on the all paragraphs and small headings.</p>
       <p>
         Source® Sans Pro, Adobe's first open source typeface family, was designed by Paul D. Hunt. It is a sans serif typeface intended to work well in user interfaces.
@@ -182,7 +182,7 @@ excerpt:    This Styleguide should show anyone how this sites markup makes sense
       </p>
     </div>
      <div class="col-50">
-      <h3 class="text-font-family--serif">Roboto Slab</h3>
+      <h3>Roboto Slab</h3>
       <p>Used for headings and attention grabbers.</p>
       <p>
         Roboto has a dual nature. It has a mechanical skeleton and the forms are largely geometric. At the same time, the font features friendly and open curves. While some grotesks distort their letterforms to force a rigid rhythm, Roboto doesn’t compromise, allowing letters to be settled into their natural width. This makes for a more natural reading rhythm more commonly found in humanist and serif types. <a href="http://www.google.com/fonts/specimen/Roboto+Slab">Read more</a>
