updated cover images

--- a/clients/index.html
+++ b/clients/index.html
@@ -1,7 +1,7 @@
 ---
 title: Clients
-lead: Read what I have done for other clients
+lead: What I have done for my clients
 layout: tag
 displaytag: clients
-cover: cover-park.jpg
+cover: cover_big_mountain.jpg
 ---
