--- a/personal/index.html
+++ b/personal/index.html
@@ -3,5 +3,5 @@ title: Personal
 lead: Read what is going on in my life
 layout: tag
 displaytag: personal
-cover: cover-fun.jpg
+cover: cover_big_me.jpg
 ---
