--- a/projects/index.html
+++ b/projects/index.html
@@ -1,8 +1,8 @@
 ---
 title: Projects
-lead: Read what I do in my spare time
+lead: What I do in my spare time
 layout: tag
 displaytag: projects
-cover: cover-elbe.jpg
-cover-class: container-image--bottom
+cover: cover_big_grass.jpg
+cover-class: container-image--top
 ---
