--- a/impressum/index.html
+++ b/impressum/index.html
@@ -2,7 +2,7 @@
 title: Impressum
 layout: default
 ---
-<div class="container bg--blue" style="background-image:url(/assets/img/cover-building.jpg);">
+<div class="container bg--blue container-image--top" style="background-image:url(/assets/img/cover/cover_big_grass.jpg);">
   <div class="container--overlay"></div>
   <section class="center">
     <div class="col-70 margin--m--bottom">
