--- a/_posts/2014-01-24-gofreaks.html
+++ b/_posts/2014-01-24-gofreaks.html
@@ -8,16 +8,16 @@ tags:
   - projects
 excerpt:    Websites for gaming communities tend to be looking like from the past. I tried to change that with my recent project for the german multigaming clan gofreaks.eu.
 ---
-<div class="container">
-  <section>
+<div class="outer">
+  <section class="container">
     <div class="col-90">
       <img src="{{ site.url }}/assets/img/gofreaks/full_homepage.png" alt="Full Site View">
     </div>
   </section>
 </div>
 
-<div class="container">
-  <section class="padding--m--bottom">
+<div class="outer">
+  <section class="container padding--m--bottom">
     <div class="col-75">
       <p>
         When I created the first homepage for the <a href="http://gofreaks.eu">gofreaks.eu</a> clan, it was only meant to be a simple page for presenting it to the outside world. The whole organisation and communication was arranged in facebook: A main facebook group for clannews, organisation, game related talk and member communication.
@@ -29,8 +29,8 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
   </section>
 </div>
 
-<div class="container bg--blue">
-  <section class="padding--m--bottom">
+<div class="outer bg--blue">
+  <section class="container padding--m--bottom">
     <div class="col-75">
       <h2 class="text-color--orange">Building a community</h2>
       <p>
@@ -39,7 +39,7 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
     </div>
   </section>
 
-  <section class="margin--m--bottom">
+  <section class="container margin--m--bottom">
     <div class="col-20">
       <img src="{{ site.url }}/assets/img/gofreaks/300px_profil.png" class="img--border" alt="Profil View">
     </div>
@@ -57,7 +57,7 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
     </div>
   </section>
 
-  <section>
+  <section class="container">
     <div class="col-75">
       <p class="margin--l--bottom">
         Since facebook was always the main plattform for the clan, I integrated the login/registration process directly with facebook. So anyone who was already in the clan (and so in facebook) could easily register on the page without creating a user account manually.
@@ -67,8 +67,8 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
   </section>
 </div>
 
-<div class="container">
-  <section>
+<div class="outer">
+  <section class="container">
     <div class="col-75">
       <h2 class="h1 split-partner">Profil Page</h2>
       <p>Every member has a profil page, where he/she can enter all the related information about him/herself. Things like Steam, Origin, Battle.net account information, but also links to twitch.tv, esl and facebook.</p>
@@ -82,8 +82,8 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
   </section>
 </div>
 
-<div class="container bg--dark">
-  <section>
+<div class="outer bg--dark">
+  <section class="container">
     <div class="col-60">
       <blockquote class="">
         &rdquo; We want to be different. New! &ldquo;
@@ -93,8 +93,8 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
   </section>
 </div>
 
-<div class="container bg--grey--light">
-  <section class="padding--m--bottom">
+<div class="outer bg--grey--light">
+  <section class="container padding--m--bottom">
     <div class="col-75">
       <h2 class="h1">Communication</h2>
       <p>
@@ -121,8 +121,8 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
   </section>
 </div>
 
-<div class="container">
-  <section class="padding--m--bottom">
+<div class="outer">
+  <section class="container padding--m--bottom">
     <div class="col-75">
       <h2>Notifications</h2>
       <p>
@@ -136,8 +136,8 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
   </section>
 </div>
 
-<div class="container bg--orange">
-  <section>
+<div class="outer bg--orange">
+  <section class="container">
     <div class="col-33">
       <img src="{{ site.url }}/assets/img/gofreaks/mobile_view.png" alt="" class="img--border">
     </div>
