--- a/impressum/index.html
+++ b/impressum/index.html
@@ -2,18 +2,18 @@
 title: Impressum
 layout: default
 ---
-<div class="container bg--blue container-image--top" style="background-image:url(/assets/img/cover/cover_big_grass.jpg);">
-  <div class="container--overlay"></div>
-  <section class="center">
+<div class="outer bg--blue outer-image--top" style="background-image:url(/assets/img/cover/cover_big_grass.jpg);">
+  <div class="outer--overlay"></div>
+  <div class="container">
     <div class="col-70 margin--m--bottom">
       <h1 class="hero">Impressum</h1>
       <p class="lead subheader">Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</p>
     </div>
-  </section>
+  </div>
 </div>
 
-<div class="container">
-  <section class="center">
+<div class="outer">
+  <div class="container">
     <div class="col-75">
       <h3>Contact</h3>
       <p>
@@ -54,7 +54,7 @@ layout: default
       <p>Sie können die Speicherung der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden nutzen können. Sie können darüber hinaus die Erfassung der durch das Cookie erzeugten und auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem sie das unter dem folgenden Link verfügbare Browser-Plugin herunterladen und installieren: <a href="http://tools.google.com/dlpage/gaoptout?hl=de">http://tools.google.com/dlpage/gaoptout?hl=de</a>.
       </p>
     </div>
-  </section>
+  </div>
 </div>
 
 {% include social_footer.html %}
