fixed cover class
changed cover class accordingly

--- a/projects/index.html
+++ b/projects/index.html
@@ -4,5 +4,5 @@ lead: What I do in my spare time
 layout: tag
 displaytag: projects
 cover: cover_big_grass.jpg
-cover-class: container-image--top
+cover-class: outer-image--top
 ---
