--- a/_posts/2014-01-24-gofreaks.html
+++ b/_posts/2014-01-24-gofreaks.html
@@ -39,7 +39,7 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
     </div>
   </section>
 
-  <section class="container margin--m--bottom">
+  <figure class="container margin--m--bottom">
     <div class="col-20">
       <img src="{{ site.url }}/assets/img/gofreaks/300px_profil.png" class="img--border" alt="Profil View">
     </div>
@@ -55,7 +55,7 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
     <div class="col-20">
       <img src="{{ site.url }}/assets/img/gofreaks/300px_stats.png" class="img--border" alt="Statistik View">
     </div>
-  </section>
+  </figure>
 
   <section class="container">
     <div class="col-75">
