--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ layout: default
       <h1 class="hero">Volker Otto</h1>
       <h2 class="h3 subheader">Web Architect, Hamburg</h2>
     </div>
-    <div class="col-70 margin--m--bottom">
+    <div class="col-40 margin--m--bottom">
       <hr>
-      <p class="lead">Building awesome websites with my small team at <a href="http://mowe-design.de/">mowe-design.de</a>. Creator of <a href="https://github.com/{{site.me.github}}/reddix">reddix</a>, a reddit chrome extension. And <a href="https://github.com/{{site.me.github}}/Br4ckets-Theme">Br4ckets</a> a Color Scheme based on Adobe Brackets for Sublime Text.</p>
+      <p class="lead">Creator of <a href="https://github.com/{{site.me.github}}/reddix">reddix</a>, <a href="https://github.com/{{site.me.github}}/Br4ckets-Theme">Br4ckets</a> and other <a href="https://github.com/{{site.me.github}}/">things</a>. See who <a href="/clients">worked with me</a>. Oh and you can <a href="mailto:{{site.me.email}}">hire me</a>.</p>
     </div>
   </div>
 </div>
