--- a/_posts/2014-01-24-gofreaks.html
+++ b/_posts/2014-01-24-gofreaks.html
@@ -10,9 +10,7 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
 ---
 <div class="outer">
   <section class="container">
-    <div class="col-90">
-      <img src="{{ site.url }}/assets/img/gofreaks/full_homepage.png" alt="Full Site View">
-    </div>
+
   </section>
 </div>
 
@@ -22,6 +20,13 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
       <p>
         When I created the first homepage for the <a href="http://gofreaks.eu">gofreaks.eu</a> clan, it was only meant to be a simple page for presenting it to the outside world. The whole organisation and communication was arranged in facebook: A main facebook group for clannews, organisation, game related talk and member communication.
       </p>
+    </div>
+
+    <div class="col-90">
+      <img src="{{ site.url }}/assets/img/gofreaks/full_homepage.png" alt="Full Site View">
+    </div>
+
+    <div class="col-75">
       <p>
         This worked out for quite some time, but lately they struggeld to keep up with all the new members. The main group exploded and it was very hard to keep up with all the information that got posted. They started to create more groups for all the different games, but that created an invisible wall between the clan members. So something new had to be done...
       </p>
@@ -129,19 +134,28 @@ excerpt:    Websites for gaming communities tend to be looking like from the pas
         After testing the site with some members the most asked feature was a notification system. As everyone was used to from facebook, you get a notification when something happens that is related to you.
       </p>
       <p>Therefore I developed the so called <code>INS</code> Instant Notification System. It tracks every activity on the site, and notifies the right members of new updates everytime. It even works without refreshing the page.</p>
-      <p class="text-align--center">
-        <img src="{{ site.url }}/assets/img/gofreaks/ins.png" alt="Instant Notification System" class="img--border--dark">
-      </p>
     </div>
   </section>
+
+  <figure class="container margin--m--bottom">
+    <div class="col-20">
+      <img src="{{ site.url }}/assets/img/gofreaks/300px_notify1.png" class="img--border" alt="Profil View">
+    </div>
+    <div class="col-20">
+      <img src="{{ site.url }}/assets/img/gofreaks/300px_notify2.png" class="img--border" alt="Notification View">
+    </div>
+    <div class="col-20">
+      <img src="{{ site.url }}/assets/img/gofreaks/300px_notify3.png" class="img--border" alt="Forum View">
+    </div>
+    <div class="col-20">
+      <img src="{{ site.url }}/assets/img/gofreaks/300px_notify4.png" class="img--border" alt="Game View">
+    </div>
+  </figure>
 </div>
 
 <div class="outer bg--orange">
   <section class="container">
-    <div class="col-33">
-      <img src="{{ site.url }}/assets/img/gofreaks/mobile_view.png" alt="" class="img--border">
-    </div>
-    <div class="col-66">
+    <div class="col-75">
       <h2>A Better mobil experience</h2>
       <p class="margin--m--bottom">
         Although this step is not 100% finished yet (as the whole site is still in beta), the page is fully responsive. That means it not only looks good on any screen device, its also fully functional. In other words, members can read and post in the forum or read other news on the site, when visiting the page from their mobile device.
