--- a/_posts/2014-01-22-styleguide.html
+++ b/_posts/2014-01-22-styleguide.html
@@ -3,7 +3,8 @@ title:     Styleguide
 layout:    post
 published: true
 tags:      projects
-excerpt:    This Styleguide should show anyone how this sites markup makes sense.
+excerpt:   This Styleguide should show anyone how this sites markup makes sense.
+cover:     cover_big_mountain.jpg
 ---
 <div class="outer">
   <section class="container">
@@ -235,7 +236,7 @@ excerpt:    This Styleguide should show anyone how this sites markup makes sense
 
   <section class="container">
     <div class="col-75">
-      <p>Blue is not the only color. We use some other colors, that play nice together. They are used to highlight other parts of the site and give the reader a better seperation of different text blocks.</p>
+      <p>Blue is not the only color. I use some other colors that play nice together. They are used to highlight other parts of the site and give the reader a better seperation of different text blocks.</p>
     </div>
   </section>
 
@@ -274,7 +275,7 @@ excerpt:    This Styleguide should show anyone how this sites markup makes sense
 
   <section class="container">
     <div class="col-75">
-      <p>The page doesnt use black, because you never should use a full <code>#000000</code> on any site. The same with white: Don't use <code>#ffffff</code>! We use a little lighter grey.</p>
+      <p>The page doesnt use black, because you never should use a full <code>#000000</code> on any site. The same with white: I don't use <code>#ffffff</code> but a little lighter grey.</p>
     </div>
   </section>
 
