--- a/_posts/2014-02-27-finding-the-right-identify.html
+++ b/_posts/2014-02-27-finding-the-right-identify.html
@@ -3,14 +3,15 @@ title:     Finding the right Identity
 layout:    post
 published: true
 tags:      projects
-excerpt:   When I started my own business in the beginning of 2013 it all seemed clear to me, to present myself as a small company instead of only single freelancer. How did that go?
+excerpt:   When I started my own business in the beginning of 2013 it all seemed clear to me, to present myself as a small company instead of only single freelancer. How did that work out?
+cover:     cover_big_street.jpg
 ---
 <div class="outer">
   <section class="container padding--m--bottom">
     <div class="col-75">
       <h2>Starting a business</h2>
       <p>
-        It all started about a year ago, in the beginning of 2013. After working for over 3 years as a jack of all trades in a small agency and studying web- and mediainformatics, the time felt right for a change. So I did what most people do: Started my own small company and called it mowe-design.
+        It all started about a year ago, in the beginning of 2013. After working for over 3 years as a jack of all trades in a small agency and studying web- and mediainformatics, the time felt right for a change. So I did what most people do: Started my own small company and called it <a href="http://möwe-design.de">mowe-design</a>.
       </p>
 
       <p>
@@ -55,7 +56,7 @@ excerpt:   When I started my own business in the beginning of 2013 it all seemed
 <div class="outer">
   <section class="container padding--m--bottom">
     <div class="col-75">
-      <h2>What I have learned...</h2>
+      <h2>What I have learned</h2>
       <p>
         Never present yourself as something you clearly not are. Even if the business opportunities might shrink, if you're only a single freelancer and not a 'full company'. It's not worth the risk and time it consumes to maintain everything. Be proud of what you are and do it with passion - the rest will follow.
       </p>
