--- a/_posts/2014-02-27-finding-the-right-identify.html
+++ b/_posts/2014-02-27-finding-the-right-identify.html
@@ -3,7 +3,7 @@ title:     Finding the right Identity
 layout:    post
 published: true
 tags:      projects
-excerpt:   When I started my own business in the beginning of 2013 it all seemed clear to me, to present myself as a small company instead of only single freelancer. How did that work out?
+excerpt:   When I started my own business in the beginning of 2013 I presented myself as a small company instead of a single freelancer. How did that work out?
 cover:     cover_big_street.jpg
 ---
 <div class="outer">
@@ -11,7 +11,7 @@ cover:     cover_big_street.jpg
     <div class="col-75">
       <h2>Starting a business</h2>
       <p>
-        It all started about a year ago, in the beginning of 2013. After working for over 3 years as a jack of all trades in a small agency and studying web- and mediainformatics, the time felt right for a change. So I did what most people do: Started my own small company and called it <a href="http://möwe-design.de">mowe-design</a>.
+        It all started about a year ago, in the beginning of 2013. After working for over 3 years as a jack of all trades in a small agency and studying web- and mediainformatics, the time felt right for a change. So I did what many people in my field do: Started my own small company. And called it <a href="http://möwe-design.de">mowe-design</a>.
       </p>
 
       <p>
