--- a/_posts/2014-02-27-finding-the-right-identify.html
+++ b/_posts/2014-02-27-finding-the-right-identify.html
@@ -20,10 +20,10 @@ cover:     cover_big_street.jpg
 
       <h3>Time is ticking</h3>
       <p>
-        Half a year later it was at a point where I was okay with the look and feel of the site. The first clients projects started, so there was pressure to finish the site and the overall cooperate identify to be able to print bills. Also it's definitely not a good sign if the company you hire is changing its logo 7 times (wasn't that many times though). Time was running like crazy.
+        Half a year later it was at a point where I was okay with the look and feel of the site. The first clients projects started, so there was pressure to finish the site and the overall cooperate identity to be able to print bills. Also it's definitely not a good sign if the company you hire is changing its logo 7 times. It wasn't that many times though. Time was running like crazy.
       </p>
       <p>
-        At the time I had one designer and the small agency - I worked with for some years - presented as cooperation partners under the 'about us' page. That way it seemed okay to use <code>us</code> instead of <code>I</code> on the whole site. It made everything more legitimate as a small company. But that was the point where it all got confusing. I had to explain my new clients, why I'm a single freelancer on the one hand, but have other people presented like they where my employees on the other. I didn't trick people though, it clearly said 'cooperation partners' above their names, so it never was my intention to present the listed persons as employees. However that wasn't so clear to other people viewing these information.
+        At the time I had another designer and the small agency - that I worked with in the last years - presented as cooperation partners under the 'about us' page. That way it seemed okay to use <code>us</code> instead of <code>I</code> on the whole site. It made everything more legitimate as a small company. But that was the point where it all got confusing. I had to explain my new clients, why I'm a single freelancer on the one hand, but have other people presented like they where my employees on the other. I didn't trick people though, it clearly said 'cooperation partners' above their names, so it never was my intention to present the listed persons as employees. However that wasn't so clear to other people viewing these information.
       </p>
     </div>
   </section>
