--- a/impressum/index.html
+++ b/impressum/index.html
@@ -23,12 +23,12 @@ layout: default
       </p>
       <table>
         <tr>
-          <td>
-            <p>Phone: <br>E-Mail: </p>
-          </td>
-          <td>
-            <p>{{ site.me.phone }}<br><a href="mailto:{{ site.me.email }}">{{ site.me.email }}</a></p>
-          </td>
+          <td>Phone: </td>
+          <td>{{ site.me.phone }}</td>
+        </tr>
+        <tr>
+          <td>E-Mail: </td>
+          <td><a href="mailto:{{ site.me.email }}">{{ site.me.email }}</a></td>
         </tr>
       </table>
 
