--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Web Architect, Hamburg
 layout: default
 ---
-<div class="outer bg--blue" style="background-image:url(/assets/img/cover/cover_big_me.jpg);" id="hello">
+<div class="outer bg--blue" style="background-image:url(/assets/img/cover/cover_big_me.jpg);" id="hello" role="banner">
   <div class="outer--overlay"></div>
   <div class="container" itemscope itemtype="http://schema.org/Person">
     <div class="col-70">
