few text changes

--- a/_posts/2014-04-04-links-and-notes-1-march.html
+++ b/_posts/2014-04-04-links-and-notes-1-march.html
@@ -11,7 +11,7 @@ cover:     cover_nl_march_2014.jpg
     <div class="col-75">
       <h2>Notes</h2>
       <p>
-        Hey there, unfortunately I didn't find any time lately to blog. Which is a good sign in one way, because it means Im busy with work for different projects. But nevertheless I would love to write more. This post should evolve to a habit of posting small updates (that are too long for twitter) and interesting links I stumbled upon. So here are my notes and links for march.
+        Hey there, unfortunately I didn't find any time to blog lately. Which is a good sign in one way, because it means I'm busy with work for different projects. But nevertheless I would love to write more. This post should evolve to a habit of posting small updates (that are too long for a <a href="https://twitter.com/{{site.me.twitter}}">tweet</a>) and interesting links I stumbled upon. So here are my notes and links for march.
       </p>
 
       <h2>Links</h2>
