--- a/_posts/2014-04-04-links-and-notes-1-march.html
+++ b/_posts/2014-04-04-links-and-notes-1-march.html
@@ -53,7 +53,7 @@ cover:     cover_nl_march_2014.jpg
       </ul>
 
       <p>
-        That's was it. Hope you might find some of them useful. The cover image is one of my <a href="http://instagram.com/chirpysnail">Instagram</a> shots from last month. Enjoy the April weather!
+        I hope you might find some of them useful. The cover image is one of my <a href="http://instagram.com/chirpysnail">Instagram</a> shots from last month. Enjoy the April weather!
       </p>
     </div>
   </section>
