--- a/impressum/index.html
+++ b/impressum/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="outer bg--blue outer-image--top" style="background-image:url(/assets/img/cover/cover_big_grass.jpg);">
   <div class="outer--overlay"></div>
   <div class="container">
-    <div class="col-70 margin--m--bottom">
+    <div class="col-70 margin--m--bottom animated fadeInDown">
       <h1 class="hero">Impressum</h1>
       <p class="lead subheader">Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</p>
     </div>
