--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ layout: default
   <div class="outer--overlay"></div>
   <div class="container" itemscope itemtype="http://schema.org/Person">
     <div class="col-70">
-      <h1 class="hero" itemprop="name">Volker Otto</h1>
-      <h2 class="h3 subheader" itemprop="jobTitle">Web Architect, Hamburg</h2>
+      <h1 class="hero animated fadeInDown" itemprop="name">Volker Otto</h1>
+      <h2 class="h3 subheader animated fadeInDown" itemprop="jobTitle">Web Architect, Hamburg</h2>
     </div>
-    <div class="col-60 margin--m--bottom">
+    <div class="col-60 margin--m--bottom animated fadeInDown">
       <hr>
       <p class="lead" itemprop="description">Freelancer and consultant around the web. Creator of <a href="https://github.com/{{site.me.github}}/reddix">reddix</a> - a reddit chrome extension, <a href="https://github.com/{{site.me.github}}/Br4ckets-Theme">Br4ckets</a> - a Sublime Text color scheme. See who <a href="/clients">worked with me</a>.</p>
     </div>
