--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@ layout: default
 ---
 <div class="container bg--blue">
   <section class="center">
-    <div class="col-70 margin--m--bottom">
+    <div class="col-70 margin--m--bottom animated fadeInDown">
       <h1 class="hero">{{ page.title }}</h1>
       <p class="lead subheader"></p>
     </div>
