--- a/_posts/2014-04-10-the-heartbleed-bug.html
+++ b/_posts/2014-04-10-the-heartbleed-bug.html
@@ -3,7 +3,7 @@ title:     Heartbleed Bug
 layout:    post
 published: true
 tags:      blog
-excerpt:   There is a serious bug in the popular OpenSSL software. Wait, what? How? What can I do?
+excerpt:   There is a serious bug in the popular OpenSSL software. Wait, what does this mean and what can I do?
 ---
 <div class="outer">
   <section class="container">
@@ -34,7 +34,7 @@ excerpt:   There is a serious bug in the popular OpenSSL software. Wait, what? H
   </section>
 </div>
 
-<div class="outer bg--blue">
+<div class="outer padding--m--bottom">
   <section class="container">
     <div class="col-75">
       <h2>What can I do?</h2>
@@ -54,13 +54,7 @@ excerpt:   There is a serious bug in the popular OpenSSL software. Wait, what? H
         <li><a href="http://lists.centos.org/pipermail/centos-announce/2014-April/020249.html">CentOS</a></li>
         <li><a href="https://lists.fedoraproject.org/pipermail/announce/2014-April/003205.html">Fedora</a></li>
       </ul>
-    </div>
-  </section>
-</div>
 
-<div class="outer padding--m--bottom">
-  <section class="container">
-    <div class="col-75">
       <h2>More Information</h2>
       <p>The bug was first mentioned on the <a href="https://www.openssl.org/news/secadv_20140407.txt">openssl.org</a> vulnerabilities news site, but it quickly spread to other popular sites like <a href="http://blog.cloudflare.com/staying-ahead-of-openssl-vulnerabilities">cloudflare.com</a> and twitter, where I read about it.</p>
 
